Nuevo archivo y cambio en html5simple

--- a/html5simple.html
+++ b/html5simple.html
@@ -2,10 +2,19 @@
 <html>
 <head>
 	<title>Prueba github</title>
+	<style type="text/css">
+body{background: purple}
+p{
+	color: blue
+}
+	</style>
+}
 </head>
 <body>
 <div>
 	<h1>La caracola magica!!! Buruluruluruluru!! :P</h1>
+
+	<p>Modificacion StreamingVersion 0.1 :)</p>
 </div>
 </body>
 </html> 
