Modificacion agregando con commit -am

--- a/html5simple.html
+++ b/html5simple.html
@@ -3,18 +3,19 @@
 <head>
 	<title>Prueba github</title>
 	<style type="text/css">
-body{background: purple}
-p{
-	color: blue
-}
+
+body{background: green}
+p{color: white}
+
 	</style>
-}
+
 </head>
 <body>
 <div>
 	<h1>La caracola magica!!! Buruluruluruluru!! :P</h1>
 
-	<p>Modificacion StreamingVersion 0.1 :)</p>
+	<p>Modificacion StreamingVr 0.2 ;D</p>
+
 </div>
 </body>
 </html> 
